update code and stat page

--- a/telecure_stat/templates/index.html
+++ b/telecure_stat/templates/index.html
@@ -168,7 +168,7 @@ Dashboard
                                     <div class="overview__inner">
                                         <div class="overview-box clearfix">
                                             <div class="icon">
-                                                <i class="zmdi zmdi-account-o"></i>
+                                                <i class="fa-solid fa-user" style="font-size: 50px;"></i>
                                             </div>
                                             <div class="text">
                                                 <h2>{{ total_members }}</h2>
@@ -176,7 +176,7 @@ Dashboard
                                             </div>
                                         </div>
                                         <div class="overview-chart">
-                                            <canvas id="widgetChart1"></canvas>
+<!--                                            <canvas id="widgetChart1"></canvas>-->
                                         </div>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@ Dashboard
                                     <div class="overview__inner">
                                         <div class="overview-box clearfix">
                                             <div class="icon">
-                                                <i class="zmdi zmdi-account-o"></i>
+                                                <i class="fa-solid fa-user-doctor" style="font-size: 50px;"></i>
                                             </div>
                                             <div class="text">
                                                 <h2>{{ total_doctors }}</h2>
@@ -194,7 +194,7 @@ Dashboard
                                             </div>
                                         </div>
                                         <div class="overview-chart">
-                                            <canvas id="widgetChart2"></canvas>
+<!--                                            <canvas id="widgetChart2"></canvas>-->
                                         </div>
                                     </div>
                                 </div>
@@ -204,7 +204,7 @@ Dashboard
                                     <div class="overview__inner">
                                         <div class="overview-box clearfix">
                                             <div class="icon">
-                                                <i class="zmdi zmdi-account-o"></i>
+                                                <i class="fa-solid fa-hospital-user" style="font-size: 50px;"></i>
                                             </div>
                                             <div class="text">
                                                 <h2>{{ total_patients }}</h2>
@@ -212,7 +212,7 @@ Dashboard
                                             </div>
                                         </div>
                                         <div class="overview-chart">
-                                            <canvas id="widgetChart3"></canvas>
+<!--                                            <canvas id="widgetChart3"></canvas>-->
                                         </div>
                                     </div>
                                 </div>
@@ -222,15 +222,15 @@ Dashboard
                                     <div class="overview__inner">
                                         <div class="overview-box clearfix">
                                             <div class="icon">
-                                                <i class="zmdi zmdi-money"></i>
+                                                <i class="fa-solid fa-sack-dollar" style="font-size: 50px;"></i>
                                             </div>
                                             <div class="text">
-                                                <h2>{{ total_doctor_balance }} RUB</h2>
-                                                <span>total doctor earnings</span>
+                                                <h2>{{ profit }} RUB</h2>
+                                                <span>total profit earnings</span>
                                             </div>
                                         </div>
                                         <div class="overview-chart">
-                                            <canvas id="widgetChart4"></canvas>
+<!--                                            <canvas id="widgetChart4"></canvas>-->
                                         </div>
                                     </div>
                                 </div>
